--- a/package.json
+++ b/package.json
@@ -15,11 +15,21 @@
     "postcss-import": "^15.1.0",
     "vite-plugin-env-compatible": "^1.1.1",
     "vue": "^3.2.47",
+    "vue-draggable-next": "^2.2.0",
     "vue-router": "^4.2.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "tailwindcss": "./tailwind.config.js"
+    }
   }
 }
