--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "naive-ui": "^2.34.4",
+    "vfonts": "^0.0.3",
     "vite": "^4.3.2"
   }
 }
