--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "postcss-import": "^15.1.0",
     "vite-plugin-env-compatible": "^1.1.1",
+    "gantt-schedule-timeline-calendar": "^3.33.13",
     "vue": "^3.2.47",
     "vue-draggable-next": "^2.2.0",
     "vue-router": "^4.2.0",
