--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5.1.0",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "postcss-import": "^15.1.0",
+    "secure-ls": "^1.2.6",
+    "tinymce": "^6.5.0",
     "vite-plugin-env-compatible": "^1.1.1",
     "vue": "^3.2.47",
+    "vue-final-modal": "^4.4.2",
     "vue-router": "^4.2.0",
-    "vuex": "^4.0.2"
+    "vue3-click-away": "^1.2.4",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
