--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "postcss-import": "^15.1.0",
     "secure-ls": "^1.2.6",
     "tinymce": "^6.5.0",
